conexao mongodb, doc criacao usuario e kill app quando nao conectar banco ou subir api
